# gotorch

./: .gitignore  LICENSE  README.md  go.mod  go.sum
.github/workflows/: cpu.yml  gpu.yml  release.yml
consts/: consts.go
docs/: libgotorch.md
example/mlp/: .gitignore  main.go
init/: init.go
internal/half/: bfloat16.go  decode.go  encode.go
internal/model/: .gitignore  load.go  load_test.go
internal/torch/: api.h  conv.go  data.go  driver.go  driver_darwin.go  driver_linux_cpu.go  driver_windows_cpu.go  exception.hpp  half.go  half_test.go  init.go  loss.go  loss.h  module.go  module.h  operator.cpp  operator.go  operator.h  optimizer.cpp  optimizer.go  optimizer.h  property.go  shapes.go  tensor.cpp  tensor.go  tensor.h  tensor_init.go  utils.go
lib/: CMakeLists.txt  conv.cpp  loss.cpp  module.cpp  operator.cpp  optimizer.cpp  tensor.cpp  utils.cpp
loss/: cross_entropy.go  loss.go  mse.go
mmgr/: mmgr.go
model/: .gitignore  load.go  load_test.go
nn/: attention.go  attention_test.go  embedding.go  embedding_test.go  layer_norm.go  layer_norm_test.go  linear.go  linear_test.go  module.go
optimizer/: adam.go  adamw.go  optimizer.go
pickle/: .gitignore  consts.go  decoder.go  decoder_test.go  errors.go  logic.go  variable.go
tensor/: build.go  build_test.go  consts.go  conv.go  data.go  data_test.go  lib.go  lib_darwin.go  lib_linux_cpu.go  loss.cpp  loss.go  loss.h  operator.cpp  operator.go  operator.h  optimizer.cpp  optimizer.go  optimizer.h  options.go  pool.go  property.cpp  shapes.go  tensor.cpp  tensor.go  tensor.h  utils.go  utils_test.go
(+15 files in other folders)
